--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "google-fonts"
-version = "0.1.5"
+version = "0.1.7"
 description = ""
 authors = ["desonglll <lindesong666@163.com>"]
 readme = "README.md"
@@ -14,6 +14,7 @@ requests = "^2.32.3"
 tqdm = "^4.67.1"
 typer = "^0.13.1"
 python-dotenv = "^1.0.1"
+pyright = "^1.1.390"
 
 [build-system]
 requires = ["poetry-core"]
